<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.bme.aut.listapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="6"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/statisticsBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/statistics"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="@dimen/btnTextSize"
            android:layout_weight="1" />

        <Button
            android:id="@+id/mapBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/map"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="@dimen/btnTextSize"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/shoppingListsBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="@dimen/btnTextSize"
            android:text="@string/shoppingLists" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
