<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="5dp"
        android:src="@drawable/list_item_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Az elem neve ide jön"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemQuantityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pieces"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimatedPrice"
                android:textSize="10dp"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/listEstimatedPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textSize="10dp"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>